lighthouse flag - meta desc

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Looking for unique letters of the alphabet and special offers? Check out our letter store, where you can find a wide variety (just 4) of trendy alphabet letters for any occasion. Shop now and show everyone how much you love your A, B, Cs!!!"
+    />
     <title>Checkout</title>
   </head>
   <body>
